Refactor swaggo documentation
